Fix text color on dark mode, separate buttons in entry section,add styling to theme images

--- a/src/components/Workout/WorkoutTable.module.css
+++ b/src/components/Workout/WorkoutTable.module.css
@@ -26,7 +26,6 @@ td input {
     background-color: transparent;
     border: none;
     max-width: 100%;
-    color: white;
 }
 
 td input:focus {
